--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,15 +15,19 @@ jobs:
     steps:
       - name: checkout
         uses: actions/checkout@v4
+
       - name: npm install
         run: npm install
+
       - name: npm build
         run: npm run build
+
       - name: docker login
         env:
           CR_PAT: ${{ secrets.TOKEN }}
-        run: echo $CR_PAT | docker login ghcr.io -u grischastorch23 --password-stdin
-      - name: docker build
-        run: docker build -t ghcr.io/grischastorch23/react-test .
-      - name: docker push
-        run: docker push ghcr.io/grischastorch23/react-test:latest
+        run: echo $CR_PAT | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+
+      - name: Build and push Docker image
+        run: |
+          docker build -t ghcr.io/${{ github.repository }}/my-image:latest .
+          docker push ghcr.io/${{ github.repository }}/my-image:latest
