--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,8 +26,9 @@ jobs:
         env:
           CR_PAT: ${{ secrets.TOKEN }}
         run: echo $CR_PAT | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+        
+      - name: docker build
+        run: docker build -t ghcr.io/${{ github.repository }}/my-image:latest .
 
-      - name: Build and push Docker image
-        run: |
-          docker build -t ghcr.io/${{ github.repository }}/my-image:latest .
-          docker push ghcr.io/${{ github.repository }}/my-image:latest
+      - name: docker push
+        run: docker push ghcr.io/${{ github.repository }}/my-image:latest
