--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,10 +22,12 @@ jobs:
       - name: npm build
         run: npm run build
 
-      - name: docker login
-        env:
-          CR_PAT: ${{ secrets.TOKEN }}
-        run: echo $CR_PAT | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+      - name: Log in to GitHub Container Registry
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.TOKEN }}
         
       - name: docker build
         run: docker build -t ghcr.io/${{ github.repository }}/my-image:latest .
