--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,15 +22,13 @@ jobs:
       - name: npm build
         run: npm run build
 
-      - name: Log in to GitHub Container Registry
-        uses: docker/login-action@v2
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.TOKEN }}
+      - name: docker login
+        env:
+          CR_PAT: ${{ secrets.TOKEN }}
+        run: echo $CR_PAT | docker login ghcr.io -u grischastorch23 --password-stdin
         
       - name: docker build
-        run: docker build -t ghcr.io/${{ github.repository }}/my-image:latest .
+        run: docker build -t ghcr.io/grischastorch23/react-test .
 
       - name: docker push
-        run: docker push ghcr.io/${{ github.repository }}/my-image:latest
+        run: docker push ghcr.io/grischastorch23/react-test:latest
