--- a/nginx.conf
+++ b/nginx.conf
@@ -6,14 +6,33 @@ events {}
 
 http {
     server {
+
         listen 80;
         server_name localhost;
 
+        root /usr/share/nginx/html;
+        index index.html;
+
         location / {
-            root   /usr/share/nginx/html;
-            index  index.html index.htm;
             try_files $uri $uri/ /index.html;
         }
+
+
+        location /api/ {
+            proxy_pass http://localhost:8081/;    #Adresse des API-Gateways
+            proxy_set_header Host $host;
+            proxy_set_header X-real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            error_page 401 403 = @handle_errors;
+        }
+
+        location @handle_errors {
+                # Bei einem 401 oder 403 Fehler wird ein Redirect zur Keycloak-Loginseite durchgeführt
+                return 302 http://localhost:8080/auth/realms/RockSolidRemedies/protocol/openid-connect/auth?client_id=rsr-api-gateway&client_secret=aEQrk8ExcEQCLzL1b1JqE7SPUlkw1ejh&redirect_uri=http://localhost:80&response_type=code&response_mode=fragment;
+            }
+
+                  
     }
 }
 
