--- a/nginx.conf
+++ b/nginx.conf
@@ -2,21 +2,35 @@
 
 # Globale Einstellungen für nginx
 
-events {}
+worker_processes 1;
+
+events {
+    worker_connections 1024;
+}
 
 http {
+    
+    include       mime.types;
+    default_type  application/octet-stream;
+
+    sendfile        on;
+    keepalive_timeout  65;
+    
     server {
 
         listen 80;
         server_name localhost;
 
-        root /usr/share/nginx/html;
-        index index.html;
-
         location / {
+            root /usr/share/nginx/html;
+            index index.html index.htm;
             try_files $uri $uri/ /index.html;
         }
 
+        error_page   500 502 503 504  /50x.html;
+        location = /50x.html {
+            root   /usr/share/nginx/html;
+        }
 
         location /api/ {
             proxy_pass http://localhost:8081/;    #Adresse des API-Gateways
