--- a/nginx.conf
+++ b/nginx.conf
@@ -19,12 +19,17 @@ http {
     server {
 
         listen 80;
-        server_name localhost;
+        server_name frontend;
 
         location / {
             root /usr/share/nginx/html;
             index index.html index.htm;
             try_files $uri $uri/ /index.html;
+
+            add_header 'Access-Control-Allow-Origin' 'http://localhost';
+            add_header 'Access-Control-Allow-Credentials' 'true';
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+            add_header 'Access-Control-Allow-Headers' 'Origin, Content-Type, Accept, Authorization';
         }
 
         error_page   500 502 503 504  /50x.html;
@@ -33,34 +38,39 @@ http {
         }
 
         location /api/ {
-            proxy_pass http://localhost:8080/;    #Adresse des API-Gateways
+            proxy_pass http://api-gateway:8080/;    #Adresse des API-Gateways
             proxy_set_header Host $host;
             proxy_set_header X-real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-            error_page 401 403 = @handle_errors;
+            proxy_intercept_errors on;
+
+            add_header 'Access-Control-Allow-Origin' 'http://localhost';
+            add_header 'Access-Control-Allow-Credentials' 'true';
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+            add_header 'Access-Control-Allow-Headers' 'Origin, Content-Type, Accept, Authorization';
         }
 
-        location @handle_errors {
-                # Bei einem 401 oder 403 Fehler wird ein Redirect zur Keycloak-Loginseite durchgeführt
-                return 302 http://localhost:8080/auth/realms/RockSolidRemedies/protocol/openid-connect/auth?client_id=rsr-api-gateway&client_secret=aEQrk8ExcEQCLzL1b1JqE7SPUlkw1ejh&redirect_uri=http://localhost:80&response_type=code&response_mode=fragment;
-            }
+        location /auth/ {
+            proxy_pass http://keycloak:8080/auth/;
 
+            proxy_buffer_size          128k;
+            proxy_buffers              4 256k;
+            proxy_busy_buffers_size    256k;
+
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_pass_request_headers on;
+            proxy_set_header X-Original-URI $request_uri;
+
+            types {
+                text/css css;
+                image/jpeg jpeg;
+                image/png png;
+            }
+        }
                   
     }
 }
-
-    # Optional: Konfiguration für den API-Upstream-Server
-    #location /api {
-    #    proxy_pass http://api:5000;
-    #    proxy_set_header Host $host;
-    #    proxy_set_header X-Real-IP $remote_addr;
-    #    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    #    proxy_set_header X-Forwarded-Proto $scheme;
-    #}
-
-
-
-
-
-
