Checkout created Order

--- a/nginx.conf
+++ b/nginx.conf
@@ -26,7 +26,7 @@ http {
             index index.html index.htm;
             try_files $uri $uri/ /index.html;
 
-            add_header 'Access-Control-Allow-Origin' 'http://localhost';
+            add_header 'Access-Control-Allow-Origin' '*';
             add_header 'Access-Control-Allow-Credentials' 'true';
             add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
             add_header 'Access-Control-Allow-Headers' 'Origin, Content-Type, Accept, Authorization';
@@ -38,17 +38,28 @@ http {
         }
 
         location /api/ {
-            proxy_pass http://api-gateway:8080/;    #Adresse des API-Gateways
-            proxy_set_header Host $host;
-            proxy_set_header X-real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_intercept_errors on;
+            if ($request_method = 'OPTIONS') {
+                    add_header 'Access-Control-Allow-Origin' '*';
+                    add_header 'Access-Control-Allow-Credentials' 'true';
+                    add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, DELETE, PUT';
+                    add_header 'Access-Control-Allow-Headers' 'Origin, Content-Type, Accept, Authorization';
+                    add_header 'Access-Control-Max-Age' 1728000;
+                    add_header 'Content-Type' 'text/plain charset=UTF-8';
+                    add_header 'Content-Length' 0;
+                    return 204;
+                }
 
-            add_header 'Access-Control-Allow-Origin' 'http://localhost';
-            add_header 'Access-Control-Allow-Credentials' 'true';
-            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
-            add_header 'Access-Control-Allow-Headers' 'Origin, Content-Type, Accept, Authorization';
+                proxy_pass http://api-gateway:8080/;    #Adresse des API-Gateways
+                proxy_set_header Host $host;
+                proxy_set_header X-real-IP $remote_addr;
+                proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+                proxy_set_header X-Forwarded-Proto $scheme;
+                proxy_intercept_errors on;
+
+                add_header 'Access-Control-Allow-Origin' '*';
+                add_header 'Access-Control-Allow-Credentials' 'true';
+                add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, DELETE, PUT';
+                add_header 'Access-Control-Allow-Headers' 'Origin, Content-Type, Accept, Authorization';
         }
 
         location /auth/ {
